<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mainBackground"
    tools:context=".UI.SettingFragment">

    <Button
        android:id="@+id/btnSettingMenu"
        android:layout_width="25dp"
        android:layout_height="15dp"
        android:layout_gravity="start"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/ic_btn_menu"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleSetting"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/reef"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/titleEmailUserSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/reef"
        android:layout_gravity="center"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleChangePass"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:fontFamily="@font/reef"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/etext"
        android:padding="20dp"
        android:fontFamily="@font/reef"
        android:hint="@string/inputNewPassword"
        android:autofillHints=""
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_gravity="center"
        android:background="@drawable/btn"
        android:fontFamily="@font/reef"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:text="@string/btnChangeText" />
    <View
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />
    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_gravity="center"
        android:background="@drawable/btn"
        android:fontFamily="@font/reef"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:text="@string/btnSignOutText" />
</LinearLayout>