<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.auth.LoginFragment"
    android:background="@color/mainBackground">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/logoAuth"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="150dp"
            android:background="@color/mainBackground"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_horizontal" />

        <EditText
            android:id="@+id/etLEmailAuth"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:padding="20dp"
            android:fontFamily="@font/reef"
            android:background="@drawable/etext"
            android:hint="@string/emailHint"
            android:autofillHints=""
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etLEmailPassword"
            android:inputType="textPassword"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_marginBottom="30dp"
            android:padding="20dp"
            android:fontFamily="@font/reef"
            android:background="@drawable/etext"
            android:hint="@string/passwordHint"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/reef"
            android:text="@string/LogInTextBtn"
            android:textAllCaps="false"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>