<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.test.ResultTestFragment"
    android:background="@color/mainBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/reef"
            android:text="@string/titleResultTest"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rbgroup"
            android:fontFamily="@font/reef"
            android:text="@string/scoreTest"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="150dp"
            android:weightSum="2">

            <Button
                android:id="@+id/btnRestart"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:drawableStart="@drawable/ic_restart"
                android:fontFamily="@font/reef"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/textRestartBtn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnGoToMenu"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:drawableStart="@drawable/ic_menu"
                android:fontFamily="@font/reef"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/textGoToMenuBtn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btnListAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/btn"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:drawableStart="@drawable/ic_list"
            android:fontFamily="@font/reef"
            android:text="  Просмотр ошибок"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>