<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mainBackground"
    app:cardCornerRadius="8dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/firstBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_toStartOf="@+id/tvDataGlobal"
            android:fontFamily="@font/reef"
            android:text="@string/textdata"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvDataGlobal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/reef"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/userGlobal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@+id/tvUserGlobal"
            android:fontFamily="@font/reef"
            android:text="@string/userNickGlobal"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvUserGlobal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/reef"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/scoresGlobal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/reef"
            android:text="@string/textScores"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvGlobalResultScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@+id/scoresGlobal"
            android:fontFamily="@font/reef"
            android:textSize="20sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>